history compress